Customized right pane's scrollbar, applied FireFox bottom padding fix, hid horizontal scrollbar on the whole app.

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -2,6 +2,9 @@ $palette: (
   color-accent: #496DAA,
   color-accent-light: #4E74B5,
   color-accent-transparent: rgba(73, 109, 170, .8),
+  color-accent-lightest-transparent: rgba(73, 109, 170, .1),
+  color-accent-lighter-transparent: rgba(73, 109, 170, .5),
+  color-accent-light-transparent: rgba(73, 109, 170, .75),
   color-experimental: linear-gradient(#496DAA, #007eff),
   color-gray-light-transparent: rgba(255, 255, 255, .1),
   color-gray-lighter-transparent: rgba(255, 255, 255, .5),
